# bazel-workshop-2024

./: .bazelrc  Dockerfile  README.md  WORKSPACE  build-and-enter-docker.sh  enter-docker.sh
bazel/: defs.bzl
c-client/: BUILD.bazel  README.md  main.c
cpp-server/: BUILD.bazel  README.md  server.cpp
integration-tests/: BUILD.bazel  c-cpp.sh
