load("//bazel:defs.bzl", "cc_library", "cc_binary")

cc_library(
    name = "crow",
    hdrs = glob(["crow/**/*.h", "crow/**/*.hpp"]),
    strip_include_prefix = "crow/",
)

cc_binary(
    name = "cpp-server",
    srcs = [
        "server.cpp",
    ],
    deps = [
        ":crow",
        "@asio//:asio",
    ],
    visibility = ["//visibility:public"],
)
